# ImageDeinterlacer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
source/: FileManager.h  ImageProcessor.h
source/private/: FileManager.cpp  ImageProcessor.cpp
